# context-lattice

./: .gitignore  BASELINE_REPORT.md  CLAUDE.md  CRITICAL_BUG_REPORT.md  FINAL_SESSION_SUMMARY.md  NEXT_SESSION.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  QUALITY_REVIEW_GUIDE.md  README.md  SESSION_PROGRESS.md  pyproject.toml  requirements.txt
.claude/: settings.json
benchmarks/: README.md  run_benchmarks.py  test_queries.json
benchmarks/results/: baseline_20260405_211100.json  baseline_20260405_211336.json  baseline_20260405_215000.json  baseline_latest.json
config/: default.yaml
finetune/intent_classifier/: generate_training_data.py  inference.py  train.py
finetune/pim_agents/metrics_evaluator/: generate_training_data.py  inference.py  train.py
finetune/pim_agents/risk_manager/: generate_training_data.py  inference.py  train.py
finetune/pim_agents/trend_analyzer/: generate_training_data.py  inference.py  train.py
finetune/query_router/: generate_training_data.py  inference.py  train.py
finetune/semantic_reranker/: generate_training_data.py  inference.py  train.py
finetune/trade_signal/: generate_training_data.py  inference.py  train.py
src/context_lattice/: __init__.py
src/context_lattice/cli/: __init__.py  main.py
src/context_lattice/core/: __init__.py  assembler.py  budget.py  hierarchy.py  node.py
src/context_lattice/feedback/: __init__.py  tracker.py
src/context_lattice/hooks/: __init__.py  pre_query.py
tests/: test_hierarchy.py  test_hooks.py  test_integration.py  test_intent_classifier.py
(+9 files in other folders)
